2014-06-13 Fri  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildObjDumpLibraryDepList): Ignore MPR.dll.
	(CygbuildPreRemoveWrite): chmod 755.

2014-06-12 Thu  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/cygbuild.pl: (HELP::OPTIONAL EXTERNAL FILES):
	Document delete.lst

2014-06-10 Tue  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: Update find option -perm +111 to newer
	  -perm /u+x,g+x,o+x search.

2014-04-16 Wed  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/cygbuild.pl (BinPkgListing): Change to --xz option.

        * bin/cygbuild.sh:
        - Chnage default package extension from bz2 to xz.
        (CygbuildFileConvertToUnix): Skip .xz files.
        (CygbuildCommandMain): Chnage from bz2 to xz.
        (CygbuildDefineGlobalMain): New variable NAME_PKG_EXT=xz.
        (CygbuildCompressTarOpt): New.
        (CygbuildCmdPkgBinaryStandard): Call CygbuildCompressTarOpt()
        and don't hard code -jcf, but obey COMPRESS_OPTION variable.
        (CygbuildCmdPkgSourceStandard):  Call CygbuildCompressTarOpt()
        and don't hard code -jcf.

2014-04-10 Thu  Jari Aalto  <jari.aalto@cante.net>

        * bin/lib/libcheck.sh: (CygbuildCmdInstallCheckDirStructure):
        Adjust /bin directory message.

        * bin/lib/cygbuild.pl: (Help::OPTIONS): Document --xz option.

        * bin/cygbuild.sh: (CygbuildBootVariablesGlobalMain): Add
        .xz to cygbuild_opt_exclude_archive_files.
        (CygbuildTarOptionCompress): Add *.xz
        (CygbuildVersionInfo): Add *.xz
        (CygbuildStrRemoveExt): Add *.xz
        (CygbuildCygbuildDefineGlobalSrcOrigGuess): Add .tar.xz check.
        (CygbuildCompress): Add xz check.
        (CygbuildFilePackageGuessMain): Add .xz check.
        (CygbuildCommandMain): Add option --xz.
        (CygbuildObjDumpLibraryDepList): Ignore ADVAPI32.dll and
        SHELL32.dll.

2013-09-19 Thu  Jari Aalto  <jari.aalto@cante.net>

        * bin/cygbuild.sh: (CygbuildConfPerlMain): check DESTDIR